<package>
  <name>rrbot_gazebo</name>
  <version>0.1.0</version>
  <description>rrbot_gazebo described for ROBDEKON simulation</description>
  <maintainer email="toth@fzi.de">Adrian Toth</maintainer>

  <license>BSD</license>

  <url type="repository">https://github.com/tothadrian/gazebo_ros_demos</url>

  <author email="toth@fzi.de">Adrian Toth</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>gazebo</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>

  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>rrbot_control</run_depend>
  <run_depend>rrbot_description</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>tf2_ros</run_depend>

  <export>
    <gazebo_ros plugin_path="${prefix}/../../lib" gazebo_media_path="${prefix}" />
  </export>
</package>
